--- a/public/css/app.css
+++ b/public/css/app.css
@@ -82,3 +82,33 @@ hr {
 h1,h2,h3,h4,h5,h6 {
     color: #3C1818;
 }
+
+.td-label, .th-label {
+    width: 150px;
+    font-weight: bold;
+}
+
+.btn-brown {
+    background-color: #3C1818;
+    color: #fff;
+}
+
+.btn-brown:hover {
+    background-color: #8E4E4E;
+    color: #fff;
+}
+
+.text-bold, .text-bold td {
+    font-weight: bold;
+}
+
+.well {
+    border: none;
+    box-shadow: none;
+    border-radius: 0;
+}
+
+.alert {
+    border: none;
+    border-radius: 0;
+}
