ga usah pake well

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21,6 +21,7 @@ body {
 	font-family: "UthmanTN1Ver10", serif;
 	line-height: 1.8em;
 	direction: rtl;
+    font-size: 24px;
 }
 
 .navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:focus, .navbar-inverse .navbar-nav>.active>a:hover {
