--- a/public/css/app.css
+++ b/public/css/app.css
@@ -35,7 +35,11 @@ body {
 }
 
 .navbar-nav>li>a {
-    padding: 27px 25px;
+    padding: 27px 10px;
+}
+
+.navbar-nav>li>a:hover, .navbar-nav>li>a:active {
+    text-decoration: underline;
 }
 
 .navbar-nav>li>a:first-of-type {
@@ -93,7 +97,7 @@ img.cover {
     top:14px;
     text-align:center;
     margin:auto;
-    font-size:20px;
+    font-size:15px;
     color: #fff !important;
 }
 
@@ -108,6 +112,7 @@ h1,h2,h3,h4,h5,h6 {
 .td-label, .th-label {
     width: 150px;
     font-weight: bold;
+    text-align: right;
 }
 
 .btn-brown {
@@ -146,3 +151,11 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 body.sidr-open { position: fixed !important; }
+
+.table-no-border {
+    margin-bottom: 0;
+}
+
+.table-no-border > tbody > tr > td {
+    border: none;
+}
