--- a/public/css/app.css
+++ b/public/css/app.css
@@ -166,6 +166,8 @@ body.sidr-open { position: fixed !important; }
     color:#3C1818;
     font-size:20px;
     padding:10px;
+    display: block;
+    margin-bottom: 10px;
 }
 
 .menu-home:hover {
